vendor/mico-2.3.2/test/idl/error/expected-stderr-case4.idl
case4.idl:13: can not overload operation or attribute 'm'
